// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardLayoutItemBuilder .size() should update size by callback 1`] = `
Object {
  "size": Object {
    "xl": Object {
      "gridWidth": 6,
      "heightAsRatio": 150,
    },
  },
  "type": "IDashboardLayoutItem",
}
`;

exports[`DashboardLayoutItemBuilder .size() should update size by value 1`] = `
Object {
  "size": Object {
    "xl": Object {
      "gridWidth": 6,
      "heightAsRatio": 150,
    },
  },
  "type": "IDashboardLayoutItem",
}
`;

exports[`DashboardLayoutItemBuilder .widget() should update content by callback 1`] = `
Object {
  "size": Object {
    "xl": Object {
      "gridWidth": 12,
      "heightAsRatio": 50,
    },
  },
  "type": "IDashboardLayoutItem",
  "widget": "Widget",
}
`;

exports[`DashboardLayoutItemBuilder .widget() should update content by callback returning undefined 1`] = `
Object {
  "size": Object {
    "xl": Object {
      "gridWidth": 12,
      "heightAsRatio": 50,
    },
  },
  "type": "IDashboardLayoutItem",
  "widget": undefined,
}
`;

exports[`DashboardLayoutItemBuilder .widget() should update content by undefined 1`] = `
Object {
  "size": Object {
    "xl": Object {
      "gridWidth": 12,
      "heightAsRatio": 50,
    },
  },
  "type": "IDashboardLayoutItem",
  "widget": undefined,
}
`;

exports[`DashboardLayoutItemBuilder .widget() should update content by value 1`] = `
Object {
  "size": Object {
    "xl": Object {
      "gridWidth": 12,
      "heightAsRatio": 50,
    },
  },
  "type": "IDashboardLayoutItem",
  "widget": "Widget",
}
`;

exports[`DashboardLayoutItemBuilder constructors .for() should throw error, when the item is damaged 1`] = `"Provided data must be IDashboardLayoutItem! 0 [object Object]"`;
